--- a/labTuple.ipynb
+++ b/labTuple.ipynb
@@ -507,6 +507,27 @@
     "\n",
     "- Придумать свои примеры"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import random\n",
+    "random.randint(0,1)"
+   ]
   }
  ],
  "metadata": {
