--- a/labAnon.ipynb
+++ b/labAnon.ipynb
@@ -86,6 +86,28 @@
     "numbers_new = tuple(filter((lambda x: (x % 2 == 0)),numbers))\n",
     "numbers_new"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "map() must have at least two arguments.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [9], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m numbers_new \u001b[39m=\u001b[39m \u001b[39mtuple\u001b[39m(\u001b[39mmap\u001b[39;49m((\u001b[39mlambda\u001b[39;49;00m x: x \u001b[39m*\u001b[39;49m \u001b[39m10\u001b[39;49m)),numbers)\n\u001b[0;32m      2\u001b[0m numbers_new\n",
+      "\u001b[1;31mTypeError\u001b[0m: map() must have at least two arguments."
+     ]
+    }
+   ],
+   "source": [
+    "numbers_new = tuple(map((lambda x: x * 10),numbers))\n",
+    "numbers_new"
+   ]
   }
  ],
  "metadata": {
