--- a/labJupyter.ipynb
+++ b/labJupyter.ipynb
@@ -4,7 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Магические возможности Jupyter Notebook"
+    "# Магические возможности Jupyter Notebook\n",
+    "\n",
+    "* Горячие клавиши\n",
+    "    - в режиме навигации (ячеек)\n",
+    "    - в режиме редактирования\n",
+    "* Команды\n",
+    "    * ! - начало командной строки\n",
+    "    * % - начало строчной команды\n",
+    "    * %% - начало блочной (ячеечной) команды"
    ]
   },
   {
@@ -13,6 +21,32 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "В режиме навигации\n",
+    "A -\n",
+    "B -\n",
+    "M - сделать markdown\n",
+    "Y - сделать код\n",
+    "D+D - удалить\n",
+    "\"\"\"\n",
+    "pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# qwerty"
+   ]
   }
  ],
  "metadata": {
