--- a/labList.ipynb
+++ b/labList.ipynb
@@ -10,7 +10,11 @@
     "\n",
     "* Список это не массив\n",
     "* [...]\n",
-    "* list[start:stop:step]"
+    "* list[start:stop:step]\n",
+    "\n",
+    "Смотри еще:\n",
+    "* [Кортеж (tuple)](labTuple.ipynb)\n",
+    "* [Генератор списков](labListGen.ipynb)"
    ]
   },
   {
