--- a/labPrettyTable.ipynb
+++ b/labPrettyTable.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
        "+---------+------+---------+--------+"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
        "'+---------+------+---------+--------+\\n| Фамилия | Имя  | Возраст |   ЗП   |\\n+---------+------+---------+--------+\\n|  Иванов | Иван |    19   | 50000  |\\n|  Петров | Пётр |    27   | 120000 |\\n| Сидоров |  Ян  |    16   |  100   |\\n+---------+------+---------+--------+'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -235,16 +235,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1848790285760\n",
-      "1848790285760\n",
-      "1848786934656\n"
+      "1952207617472\n",
+      "1952207617472\n",
+      "1952207255968\n"
      ]
     }
    ],
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -414,6 +414,122 @@
    ],
    "source": [
     "print(ta.get_string(start=1,end=3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Экспортировать таблицу в другой формат"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Фамилия,Имя,Возраст,ЗП\n",
+      "Иванов,Иван,19,50000\n",
+      "Петров,Пётр,27,120000\n",
+      "Сидоров,Ян,16,100\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ta.get_csv_string())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\n",
+      "    [\n",
+      "        \"Фамилия\",\n",
+      "        \"Имя\",\n",
+      "        \"Возраст\",\n",
+      "        \"ЗП\"\n",
+      "    ],\n",
+      "    {\n",
+      "        \"Возраст\": 19,\n",
+      "        \"ЗП\": 50000,\n",
+      "        \"Имя\": \"Иван\",\n",
+      "        \"Фамилия\": \"Иванов\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"Возраст\": 27,\n",
+      "        \"ЗП\": 120000,\n",
+      "        \"Имя\": \"Пётр\",\n",
+      "        \"Фамилия\": \"Петров\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"Возраст\": 16,\n",
+      "        \"ЗП\": 100,\n",
+      "        \"Имя\": \"Ян\",\n",
+      "        \"Фамилия\": \"Сидоров\"\n",
+      "    }\n",
+      "]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ta.get_json_string(ensure_ascii=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<table id=\"my_table\" class=\"super_table\">\n",
+      "    <thead>\n",
+      "        <tr>\n",
+      "            <th>Фамилия</th>\n",
+      "            <th>Имя</th>\n",
+      "            <th>Возраст</th>\n",
+      "            <th>ЗП</th>\n",
+      "        </tr>\n",
+      "    </thead>\n",
+      "    <tbody>\n",
+      "        <tr>\n",
+      "            <td>Иванов</td>\n",
+      "            <td>Иван</td>\n",
+      "            <td>19</td>\n",
+      "            <td>50000</td>\n",
+      "        </tr>\n",
+      "        <tr>\n",
+      "            <td>Петров</td>\n",
+      "            <td>Пётр</td>\n",
+      "            <td>27</td>\n",
+      "            <td>120000</td>\n",
+      "        </tr>\n",
+      "        <tr>\n",
+      "            <td>Сидоров</td>\n",
+      "            <td>Ян</td>\n",
+      "            <td>16</td>\n",
+      "            <td>100</td>\n",
+      "        </tr>\n",
+      "    </tbody>\n",
+      "</table>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ta.get_html_string(attributes={\"id\":\"my_table\", \"class\":\"super_table\"}))"
    ]
   }
  ],
