--- a/labOS.ipynb
+++ b/labOS.ipynb
@@ -216,6 +216,38 @@
     "for current_dir, dirs, files in os.walk(\".\"):\n",
     "    print(os.path.abspath(current_dir), dirs, files)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Каталогов = 6 и файлов = 0 в папке .\n",
+      "Каталогов = 0 и файлов = 0 в папке .\\Corporate\n",
+      "Каталогов = 0 и файлов = 1 в папке .\\en-US\n",
+      "Каталогов = 0 и файлов = 0 в папке .\\Help\n",
+      "Каталогов = 2 и файлов = 0 в папке .\\mui\n",
+      "Каталогов = 0 и файлов = 8 в папке .\\mui\\0409\n",
+      "Каталогов = 0 и файлов = 8 в папке .\\mui\\0419\n",
+      "Каталогов = 2 и файлов = 0 в папке .\\OEM\n",
+      "Каталогов = 0 и файлов = 0 в папке .\\OEM\\ContentStore\n",
+      "Каталогов = 0 и файлов = 0 в папке .\\OEM\\IndexStore\n",
+      "Каталогов = 2 и файлов = 0 в папке .\\Windows\n",
+      "Каталогов = 1 и файлов = 0 в папке .\\Windows\\ContentStore\n",
+      "Каталогов = 0 и файлов = 0 в папке .\\Windows\\ContentStore\\en-US\n",
+      "Каталогов = 1 и файлов = 0 в папке .\\Windows\\IndexStore\n",
+      "Каталогов = 0 и файлов = 0 в папке .\\Windows\\IndexStore\\en-US\n"
+     ]
+    }
+   ],
+   "source": [
+    "for current_dir, dirs, files in os.walk(\".\"):\n",
+    "    print(f\"Каталогов = {len(dirs)} и файлов = {len(files)} в папке {os.path.abspath(current_dir)}\")"
+   ]
   }
  ],
  "metadata": {
