--- a/labOS.ipynb
+++ b/labOS.ipynb
@@ -219,34 +219,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Каталогов = 6 и файлов = 0 в папке .\n",
-      "Каталогов = 0 и файлов = 0 в папке .\\Corporate\n",
-      "Каталогов = 0 и файлов = 1 в папке .\\en-US\n",
-      "Каталогов = 0 и файлов = 0 в папке .\\Help\n",
-      "Каталогов = 2 и файлов = 0 в папке .\\mui\n",
-      "Каталогов = 0 и файлов = 8 в папке .\\mui\\0409\n",
-      "Каталогов = 0 и файлов = 8 в папке .\\mui\\0419\n",
-      "Каталогов = 2 и файлов = 0 в папке .\\OEM\n",
-      "Каталогов = 0 и файлов = 0 в папке .\\OEM\\ContentStore\n",
-      "Каталогов = 0 и файлов = 0 в папке .\\OEM\\IndexStore\n",
-      "Каталогов = 2 и файлов = 0 в папке .\\Windows\n",
-      "Каталогов = 1 и файлов = 0 в папке .\\Windows\\ContentStore\n",
-      "Каталогов = 0 и файлов = 0 в папке .\\Windows\\ContentStore\\en-US\n",
-      "Каталогов = 1 и файлов = 0 в папке .\\Windows\\IndexStore\n",
-      "Каталогов = 0 и файлов = 0 в папке .\\Windows\\IndexStore\\en-US\n"
+      "Каталогов = 6 и файлов = 0 в папке C:\\Windows\\Help\n",
+      "Каталогов = 0 и файлов = 0 в папке C:\\Windows\\Help\\Corporate\n",
+      "Каталогов = 0 и файлов = 1 в папке C:\\Windows\\Help\\en-US\n",
+      "Каталогов = 0 и файлов = 0 в папке C:\\Windows\\Help\\Help\n",
+      "Каталогов = 2 и файлов = 0 в папке C:\\Windows\\Help\\mui\n",
+      "Каталогов = 0 и файлов = 8 в папке C:\\Windows\\Help\\mui\\0409\n",
+      "Каталогов = 0 и файлов = 8 в папке C:\\Windows\\Help\\mui\\0419\n",
+      "Каталогов = 2 и файлов = 0 в папке C:\\Windows\\Help\\OEM\n",
+      "Каталогов = 0 и файлов = 0 в папке C:\\Windows\\Help\\OEM\\ContentStore\n",
+      "Каталогов = 0 и файлов = 0 в папке C:\\Windows\\Help\\OEM\\IndexStore\n",
+      "Каталогов = 2 и файлов = 0 в папке C:\\Windows\\Help\\Windows\n",
+      "Каталогов = 1 и файлов = 0 в папке C:\\Windows\\Help\\Windows\\ContentStore\n",
+      "Каталогов = 0 и файлов = 0 в папке C:\\Windows\\Help\\Windows\\ContentStore\\en-US\n",
+      "Каталогов = 1 и файлов = 0 в папке C:\\Windows\\Help\\Windows\\IndexStore\n",
+      "Каталогов = 0 и файлов = 0 в папке C:\\Windows\\Help\\Windows\\IndexStore\\en-US\n"
      ]
     }
    ],
    "source": [
     "for current_dir, dirs, files in os.walk(\".\"):\n",
     "    print(f\"Каталогов = {len(dirs)} и файлов = {len(files)} в папке {os.path.abspath(current_dir)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Windows\\Help\\Corporate\n",
+      "C:\\Windows\\Help\\en-US\n",
+      "C:\\Windows\\Help\\Help\n",
+      "C:\\Windows\\Help\\mui\n",
+      "C:\\Windows\\Help\\OEM\n",
+      "C:\\Windows\\Help\\Windows\n",
+      "C:\\Windows\\Help\\mui\\0409\n",
+      "C:\\Windows\\Help\\mui\\0419\n",
+      "C:\\Windows\\Help\\OEM\\ContentStore\n",
+      "C:\\Windows\\Help\\OEM\\IndexStore\n",
+      "C:\\Windows\\Help\\Windows\\ContentStore\n",
+      "C:\\Windows\\Help\\Windows\\IndexStore\n",
+      "C:\\Windows\\Help\\Windows\\ContentStore\\en-US\n",
+      "C:\\Windows\\Help\\Windows\\IndexStore\\en-US\n"
+     ]
+    }
+   ],
+   "source": [
+    "for current_dir, dirs, files in os.walk(\".\"):\n",
+    "    for dir in dirs:\n",
+    "        print(os.path.join(os.path.abspath(current_dir), dir))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nt\n",
+      "Admin\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(os.name)\n",
+    "print(os.getlogin())\n",
+    "print(os.cpu_count())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# HW:\n",
+    "* os\n",
+    "* os.path"
    ]
   }
  ],
