--- a/labFileTXT.ipynb
+++ b/labFileTXT.ipynb
@@ -121,12 +121,252 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(os.path.join(TEMP_DIR,'temp_TXT_poem.txt'),'w',encoding='utf-8') as f:\n",
+    "with open(os.path.join(TEMP_DIR,'temp_TXT_poem.txt'),'w') as f:\n",
     "    f.write(poem)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(os.path.join(TEMP_DIR,'temp_TXT_poem_utf-8.txt'),'w',encoding='utf-8') as f:\n",
+    "    f.write(poem)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Чтение из файла"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "QWE\n",
+      "123456\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(os.path.join(TEMP_DIR,'temp_TXT.txt')) as f:\n",
+    "    print(f.read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "QWE\n",
+      "123456"
+     ]
+    }
+   ],
+   "source": [
+    "with open(os.path.join(TEMP_DIR,'temp_TXT.txt')) as f:\n",
+    "    for line in f:\n",
+    "        print(line)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "line='QWE\\n'\n",
+      "line='123456'\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(os.path.join(TEMP_DIR,'temp_TXT.txt')) as f:\n",
+    "    for line in f:\n",
+    "        print(f'{line=}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0) 'QWE\\n'\n",
+      "1) '123456'\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(os.path.join(TEMP_DIR,'temp_TXT.txt')) as f:\n",
+    "    for n, line in enumerate(f):\n",
+    "        print(f'{n}) {repr(line)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "QWE\n",
+      "\n",
+      "123456\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(os.path.join(TEMP_DIR,'temp_TXT.txt')) as f:\n",
+    "    print(f.readline())\n",
+    "    print(f.readline())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['QWE\\n', '123456']\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(os.path.join(TEMP_DIR,'temp_TXT.txt')) as f:\n",
+    "    print(f.readlines())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Однажды, в студеную зимнюю пору,\n",
+      "Я из лесу вышел; был сильный мороз.\n",
+      "Гляжу, поднимается медленно в гору\n",
+      "Лошадка, везущая хворосту воз.\n",
+      "\n",
+      "И, шествуя важно, в спокойствии чинном,\n",
+      "Лошадку ведет под уздцы мужичок\n",
+      "В больших сапогах, в полушубке овчинном,\n",
+      "В больших рукавицах... а сам с ноготок!\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(os.path.join(TEMP_DIR,'temp_TXT_poem.txt')) as f:\n",
+    "    for line in f:\n",
+    "        print(line,end='')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Однажды, в студеную зимнюю пору,\n",
+      "Я из лесу вышел; был сильный мороз.\n",
+      "Гляжу, поднимается медленно в гору\n",
+      "Лошадка, везущая хворосту воз.\n",
+      "\n",
+      "И, шествуя важно, в спокойствии чинном,\n",
+      "Лошадку ведет под уздцы мужичок\n",
+      "В больших сапогах, в полушубке овчинном,\n",
+      "В больших рукавицах... а сам с ноготок!\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(os.path.join(TEMP_DIR,'temp_TXT_poem_utf-8.txt'),encoding='utf-8') as f:\n",
+    "    for line in f:\n",
+    "        print(line,end='')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "UnicodeDecodeError",
+     "evalue": "'charmap' codec can't decode byte 0x98 in position 249: character maps to <undefined>",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mUnicodeDecodeError\u001b[0m                        Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [35], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(TEMP_DIR,\u001b[39m'\u001b[39m\u001b[39mtemp_TXT_poem_utf-8.txt\u001b[39m\u001b[39m'\u001b[39m)) \u001b[39mas\u001b[39;00m f:\n\u001b[1;32m----> 2\u001b[0m     \u001b[39mfor\u001b[39;00m line \u001b[39min\u001b[39;00m f:\n\u001b[0;32m      3\u001b[0m         \u001b[39mprint\u001b[39m(line,end\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Users\\Admin\\AppData\\Local\\Programs\\Python\\Python39\\lib\\encodings\\cp1251.py:23\u001b[0m, in \u001b[0;36mIncrementalDecoder.decode\u001b[1;34m(self, input, final)\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdecode\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39minput\u001b[39m, final\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m):\n\u001b[1;32m---> 23\u001b[0m     \u001b[39mreturn\u001b[39;00m codecs\u001b[39m.\u001b[39;49mcharmap_decode(\u001b[39minput\u001b[39;49m,\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49merrors,decoding_table)[\u001b[39m0\u001b[39m]\n",
+      "\u001b[1;31mUnicodeDecodeError\u001b[0m: 'charmap' codec can't decode byte 0x98 in position 249: character maps to <undefined>"
+     ]
+    }
+   ],
+   "source": [
+    "with open(os.path.join(TEMP_DIR,'temp_TXT_poem_utf-8.txt')) as f:\n",
+    "    for line in f:\n",
+    "        print(line,end='')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Однажды, в студеную зимнюю пору,\n",
+      "Я из лесу вышел; был сильный мороз.\n",
+      "Гляжу, поднимается медленно в гору\n",
+      "Лошадка, везущая хворосту воз.\n",
+      "\n",
+      "И, шествуя важно, в спокойствии чинном,\n",
+      "Лошадку ведет под уздцы мужичок\n",
+      "В больших сапогах, в полушубке овчинном,\n",
+      "В больших рукавицах... а сам с ноготок!\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(os.path.join(TEMP_DIR,'temp_TXT_poem_utf-8.txt'),encoding='utf-8') as f:\n",
+    "    for line in f.readlines():\n",
+    "        print(line,end='')"
    ]
   }
  ],
