--- a/labFileTXT.ipynb
+++ b/labFileTXT.ipynb
@@ -50,8 +50,7 @@
     "    os.mkdir(TEMP_DIR)\n",
     "\n",
     "# Пример использования    \n",
-    "os.path.join(TEMP_DIR, \"temp_file.txt\")\n",
-    "\n"
+    "os.path.join(TEMP_DIR, \"temp_file.txt\")"
    ]
   },
   {
