--- a/labFileSize.ipynb
+++ b/labFileSize.ipynb
@@ -32,13 +32,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "c:\\Универ\\Современные технологии программирования\\питон\\mp_2022_224-322_python\n",
       "+----------------------------+---------------+-----------+\n",
       "|         Имя файла          | Размер (байт) |   Размер  |\n",
       "+----------------------------+---------------+-----------+\n",
@@ -55,7 +56,7 @@
       "|    labDrawRectangle.py     |      465      | 465.00 KB |\n",
       "|     labDrawSnake.ipynb     |      3130     |  3.06 MB  |\n",
       "|      labDrawSnake.py       |      376      | 376.00 KB |\n",
-      "|     labFileSize.ipynb      |      5004     |  4.89 MB  |\n",
+      "|     labFileSize.ipynb      |      5361     |  5.24 MB  |\n",
       "|      labFileTXT.ipynb      |     12226     |  11.94 MB |\n",
       "|        labFor.ipynb        |      3255     |  3.18 MB  |\n",
       "|       labFunc.ipynb        |      5661     |  5.53 MB  |\n",
