--- a/labSQLite.ipynb
+++ b/labSQLite.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
        "'temp\\\\temp_SQLite.db'"
       ]
      },
-     "execution_count": 267,
+     "execution_count": 271,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mPermissionError\u001b[0m                           Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [268], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m db_name \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(TEMP_DIR, \u001b[39m\"\u001b[39m\u001b[39mtemp_SQLite.db\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      3\u001b[0m \u001b[39mif\u001b[39;00m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39misfile(db_name):\n\u001b[1;32m----> 4\u001b[0m     os\u001b[39m.\u001b[39;49mremove(db_name)\n\u001b[0;32m      5\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mФайл [\u001b[39m\u001b[39m{\u001b[39;00mdb_name\u001b[39m}\u001b[39;00m\u001b[39m] удален\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn [272], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m db_name \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(TEMP_DIR, \u001b[39m\"\u001b[39m\u001b[39mtemp_SQLite.db\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      3\u001b[0m \u001b[39mif\u001b[39;00m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39misfile(db_name):\n\u001b[1;32m----> 4\u001b[0m     os\u001b[39m.\u001b[39;49mremove(db_name)\n\u001b[0;32m      5\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mФайл [\u001b[39m\u001b[39m{\u001b[39;00mdb_name\u001b[39m}\u001b[39;00m\u001b[39m] удален\u001b[39m\u001b[39m\"\u001b[39m)\n",
       "\u001b[1;31mPermissionError\u001b[0m: [WinError 32] Процесс не может получить доступ к файлу, так как этот файл занят другим процессом: 'temp\\\\temp_SQLite.db'"
      ]
     }
@@ -624,15 +624,64 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ProgrammingError",
-     "evalue": "Incorrect number of bindings supplied. The current statement uses 1, and there are 2 supplied.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mProgrammingError\u001b[0m                          Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [250], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m sql \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mDELETE FROM cities where id = ?\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m----> 3\u001b[0m cur\u001b[39m.\u001b[39;49mexecute(sql, (\u001b[39m6\u001b[39;49m,\u001b[39m7\u001b[39;49m))\n\u001b[0;32m      5\u001b[0m from_db_cursor(cur\u001b[39m.\u001b[39mexecute(\u001b[39m\"\u001b[39m\u001b[39mSELECT * FROM cities\u001b[39m\u001b[39m\"\u001b[39m))\n",
-      "\u001b[1;31mProgrammingError\u001b[0m: Incorrect number of bindings supplied. The current statement uses 1, and there are 2 supplied."
-     ]
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>id</th>\n",
+       "            <th>name</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>1</td>\n",
+       "            <td>Ялта</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>2</td>\n",
+       "            <td>Москва</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>3</td>\n",
+       "            <td>Воронеж</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>4</td>\n",
+       "            <td>Калуга</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>5</td>\n",
+       "            <td>Тула</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>7</td>\n",
+       "            <td>Berlin</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>8</td>\n",
+       "            <td>Belgrade</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "+----+----------+\n",
+       "| id |   name   |\n",
+       "+----+----------+\n",
+       "| 1  |   Ялта   |\n",
+       "| 2  |  Москва  |\n",
+       "| 3  | Воронеж  |\n",
+       "| 4  |  Калуга  |\n",
+       "| 5  |   Тула   |\n",
+       "| 7  |  Berlin  |\n",
+       "| 8  | Belgrade |\n",
+       "+----+----------+"
+      ]
+     },
+     "execution_count": 269,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
